5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1724_2526.log
== TEST (2019-05-14 10:58:50) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0

while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
		print(s)
	a = a + 1
-- OUTPUT:
1
3
7
12
22
42
173
435
959
1614
2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:07) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0

while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
print(s)
	a = a + 1
-- ERROR:
File "XXXX", line 13
    a = a + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:21) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0

while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1
	
print(s)
-- OUTPUT:
2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:26) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0

while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1
	
print(s)
-- OUTPUT:
2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:33) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0

while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1
	
print(a)
-- OUTPUT:
2620
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:09) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:20) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)
-- OUTPUT:
2924
2620
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:18) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:02:27) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.174749
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:16:38) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:07) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:07) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:07) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:07) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:08) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:08) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:08) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:08) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:08) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:08) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:09) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:09) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:09) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:09) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:10) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:10) 
-- CODE:
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))

a = 1
b = 1
s = 0
r = 0
while(a < n1):
	rest = n1%a
	if(rest == 0):
		s = a + s
	a = a + 1

while(b < n2):
	res = n2%b
	if(res == 0):
		r = b + r
	b = b + 1
	
print(s)
print(r)

if(s == n2 and r == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
